[gd_scene load_steps=7 format=3 uid="uid://cwoi3ra30rcua"]

[ext_resource type="Script" path="res://scripts/GameController.gd" id="1_0gaxl"]
[ext_resource type="Texture2D" uid="uid://b0lwp4axqekrm" path="res://assets/Sprite_sheet.png" id="1_3ji8j"]
[ext_resource type="PackedScene" uid="uid://ca8xlj67orbg2" path="res://scenes/ground_block.tscn" id="2_wchj1"]
[ext_resource type="PackedScene" uid="uid://l8vmemjptig5" path="res://scenes/bird.tscn" id="3_i80re"]
[ext_resource type="PackedScene" uid="uid://ckowjun6oh1a6" path="res://scenes/background.tscn" id="3_pnlfm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sw7js"]
size = Vector2(401, 10)

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_0gaxl")

[node name="Bird" parent="." instance=ExtResource("3_i80re")]
position = Vector2(100, 300)
scale = Vector2(2, 2)

[node name="Background" parent="." instance=ExtResource("3_pnlfm")]

[node name="PipeSpawnTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[node name="GroundBlock" parent="." instance=ExtResource("2_wchj1")]
z_index = 1
position = Vector2(200, 710)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Restart" type="Label" parent="UI"]
top_level = true
light_mask = 0
texture_filter = 1
layout_mode = 0
offset_left = 9.0
offset_top = 36.0
offset_right = 145.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 26
text = "R - Restart"

[node name="ScoreLabel" type="Label" parent="UI"]
top_level = true
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 38.0
offset_bottom = 78.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 26
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Copyright" type="Sprite2D" parent="UI"]
top_level = true
z_index = 2
texture_filter = 1
position = Vector2(314.678, 693.25)
scale = Vector2(1.78572, 1.78572)
texture = ExtResource("1_3ji8j")
region_enabled = true
region_rect = Rect2(358, 0, 95, 7)

[node name="Score" type="Sprite2D" parent="UI"]
top_level = true
texture_filter = 1
position = Vector2(313, 60)
scale = Vector2(2.44934, 2.94231)
texture = ExtResource("1_3ji8j")
region_enabled = true
region_rect = Rect2(244, 174, 40, 13)

[node name="GameOverSprite" type="Sprite2D" parent="UI"]
visible = false
top_level = true
z_index = 1
texture_filter = 1
position = Vector2(200, 350)
scale = Vector2(3, 3)
texture = ExtResource("1_3ji8j")
region_enabled = true
region_rect = Rect2(146, 199, 94, 19)

[node name="HighScoreLabel" type="Label" parent="UI"]
z_index = 2
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 4.825
anchor_right = 4.825
offset_left = -192.0
offset_top = 4.0
offset_right = 207.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 21
text = "High Score: 0"
horizontal_alignment = 1

[node name="StaticMapElements" type="Node2D" parent="."]

[node name="TopBorder" type="StaticBody2D" parent="StaticMapElements"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticMapElements/TopBorder"]
position = Vector2(199.5, -5)
shape = SubResource("RectangleShape2D_sw7js")

[node name="BotBorder" type="StaticBody2D" parent="StaticMapElements"]
position = Vector2(0, 648.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticMapElements/BotBorder"]
position = Vector2(199.5, -5)
shape = SubResource("RectangleShape2D_sw7js")
